lab1/Test/L1-A-12-44.output
Error Type A at Line 15
Error Type B at Line 46
